--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ President Obama believes that sub-Saharan Africa can be the world’s next major
 
 <a>Major Funded Projects</a></p>
 
-<h3 class='entry-title'><a href="ajsingh273.github.io/tradegov/min.html">Minneapolis ODO</h3>
+<h3 class='entry-title'><a href="/tradegov/min.html">Minneapolis ODO</h3>
 
 
 </div>
